added scroll top js

--- a/photography/photography.html
+++ b/photography/photography.html
@@ -30,7 +30,7 @@
 
 			<h1 class="photoTitle">Photography</h1>
 			<p class="photo-desc">If you don't see me sitting behind the computer designing, I'll be behind a camera shooting the streets of Toronto.</br></br>
-			Check out my <a class="person" href="https://www.instagram.com/jefferyyli/">Instagram</a> to view more photo.</p>
+			Check out my <a class="person" href="https://www.instagram.com/jefferyyli/" target=_blank>Instagram</a> to view more photos.</p>
 
 			<!-- Photography -->
 
