--- a/uiux/rbcpathway.html
+++ b/uiux/rbcpathway.html
@@ -25,6 +25,8 @@
 				</div>
 			</nav>
 
+			<button onclick="topFunction()" id="scrollTop" title="go to top"><i class="arrow up"></i></button>
+
 			<h1 class="projectTitle">RBC Pathway</h1>
 			<h3 class="projectSubtitle">A new tool for UX designers and researchers</h3>
 			
@@ -265,7 +267,7 @@
 				</div>
 
 			</div>
-
 		</div>
+		<script type="text/javascript" src=../js/scrolltop.js></script>
 	</body>
 </html>
