--- a/photography/portraits.html
+++ b/photography/portraits.html
@@ -36,20 +36,20 @@
 
 			<div class="photogrid">
 				<div class="photocolumn">
-					<a class="photoContain" href="#"><img src="../images/photography/portraits/bellcity.jpg"></a>
-					<a class="photoContain" href="#"><img src="../images/photography/portraits/desmond.jpg"></a>
+					<a class="photoContain" href="../photography/portraits/bellcity.html"><img src="../images/photography/portraits/bellcity.jpg"></a>
+					<a class="photoContain" href="../photography/portraits/desmond.html"><img src="../images/photography/portraits/desmond.jpg"></a>
 				</div>
 				<div class="photocolumn">
-					<a class="photoContain" href="#"><img src="../images/photography/portraits/christyblossom.jpg"></a>
-					<a class="photoContain" href="#"><img src="../images/photography/portraits/christyqnc.jpg"></a>	
+					<a class="photoContain" href="../photography/portraits/christyblossom.html"><img src="../images/photography/portraits/christyblossom.jpg"></a>
+					<a class="photoContain" href="../photography/portraits/christyqnc.html"><img src="../images/photography/portraits/christyqnc.jpg"></a>	
 				</div>
 				<div class="photocolumn">
-					<a class="photoContain" href="#"><img src="../images/photography/portraits/bell.jpg"></a>
-					<a class="photoContain" href="#"><img src="../images/photography/portraits/sarahmtl.jpg"></a>			
+					<a class="photoContain" href="../photography/portraits/bell.html"><img src="../images/photography/portraits/bell.jpg"></a>
+					<a class="photoContain" href="../photography/portraits/sarahmtl.html"><img src="../images/photography/portraits/sarahmtl.jpg"></a>			
 				</div>
 				<div class="photocolumn">
-					<a class="photoContain" href="#"><img src="../images/photography/portraits/desmondgold.jpg"></a>
-					<a class="photoContain" href="#"><img src="../images/photography/portraits/bellsmoke.jpg"></a>
+					<a class="photoContain" href="../photography/portraits/desmondgold.html"><img src="../images/photography/portraits/desmondgold.jpg"></a>
+					<a class="photoContain" href="../photography/portraits/bellsmoke.html"><img src="../images/photography/portraits/bellsmoke.jpg"></a>
 				</div>
 			</div>
 
