--- a/index.html
+++ b/index.html
@@ -31,33 +31,24 @@
 				<p class="heroBody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut orci id velit molestie pulvinar. Proin dapibus eu purus vitae posuere.</p>
 			</div>
 
-			<!-- UI/UX -->
-
-			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic" href="rbcpathway.html"><img src="images/RBCPathway_Mockup.jpg"></a></div>
-				<div class="projectDesc">
-					<h2 class="projectTitle">UI/UX Design</h3>
-					<p class="project-desc-home">I love solving design problems and creating beautiful prototypes.</p>
+			<h2 class="homeTitle">Featured Work</h2>
+			<div class="grid">
+				<div class="homecontainer">
+					<img src=images/RBC_Pathway/RBCPathway_Mockup.jpg>
+				</div>
+				<div class="homecontainer">
+					<img src=images/graphic_design/samuraibox.jpg>
 				</div>
 			</div>
-
-			<!-- Graphic Design -->
-
-			<div class="workSection">
-				<div class="projectDesc">
-					<h2 class="projectTitle">Graphic Design &amp; Illustration</h2>
-					<p class="project-desc-home">In my spare time, I love making digital art and creating posters. Originally I started doing Graphic Design first earlier in high school.</p>
+			<div class="homegrid">
+				<div class=homebox> 
+					<img src="images/htnbox.jpg">
 				</div>
-					<div class="imageLeft"><a class="projectPic" href="rbcpathway.html"><img src="images/RBCPathway_Mockup.jpg"></a></div>
-			</div>
-
-			<!-- Photography -->
-
-			<div class="workSection">
-				<div class="imageLeft"><a class="projectPic" href="rbcpathway.html"><img src="images/RBCPathway_Mockup.jpg"></a></div>
-				<div class="projectDesc">
-					<h2 class="projectTitle">Photography</h3>
-					<p class="project-desc-home">I love solving design problems and creating beautiful prototypes.</p>
+				<div class="homebox">
+					<img src="images/mubox.jpg">
+				</div>
+				<div class="homebox">
+					<img src="images/sfbox.jpg">
 				</div>
 			</div>
 
