--- a/uiux/rbcpathway.html
+++ b/uiux/rbcpathway.html
@@ -25,9 +25,10 @@
 				</div>
 			</nav>
 
-			<button onclick="topFunction()" id="scrollTop" title="go to top"><i class="arrow up"></i></button>
+			<button onclick="topFunction()" id="scrollToTop" title="go to top"><i class="arrow up"></i></button>
 
-			<h1 class="projectTitle">RBC Pathway</h1>
+
+			<h1 class="projectTitle"><body id="top">RBC Pathway</h1>
 			<h3 class="projectSubtitle">A new tool for UX designers and researchers</h3>
 			
 			<div class="metaDesc">
