--- a/graphicdesign/wingedcanvas.html
+++ b/graphicdesign/wingedcanvas.html
@@ -60,6 +60,12 @@
 					<img class="projectMock" src="../images/graphic_design/wcemail.jpg">
 			</div>
 
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+
 		</div>
 	</body>
 </html>
