--- a/index.html
+++ b/index.html
@@ -34,22 +34,30 @@
 			<h2 class="homeTitle">Featured Work</h2>
 			<div class="grid">
 				<div class="homecontainer">
-					<img src=images/RBC_Pathway/RBCPathway_Mockup.jpg>
+					<a class="projectPicBox" href="uiux/rbcpathway.html"><img src=images/RBC_Pathway/RBCPathway_Mockup.jpg></a>
+					<!-- <p class="hovertext">RBC Pathway</p>
+					<p class="hoversubtext">UI/UX Design</p> -->
 				</div>
 				<div class="homecontainer">
-					<img src=images/graphic_design/samuraibox.jpg>
+					<a class="projectPicBox" href="graphicdesign/samurai.html"><img src=images/graphic_design/samuraibox.jpg></a>
 				</div>
 			</div>
 			<div class="homegrid">
 				<div class=homebox> 
-					<img src="images/htnbox.jpg">
+					<a class="projectPicBox" href="uiux/HTNmobile_app.html"><img src="images/htnbox.jpg"></a>
 				</div>
 				<div class="homebox">
-					<img src="images/mubox.jpg">
+					<a class="projectPicBox" href="photography/explore/muroof.html"><img src="images/mubox.jpg"></a>
 				</div>
 				<div class="homebox">
-					<img src="images/sfbox.jpg">
+					<a class="projectPicBox" href="photography/urban/goldengatefog.html"><img src="images/sfbox.jpg"></a>
 				</div>
+			</div>
+
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
 			</div>
 
 		</div>
