--- a/photography/explore.html
+++ b/photography/explore.html
@@ -41,7 +41,7 @@
 					<a class="photoContain" href="#"><img src="../images/photography/explore/roof2.jpg"></a>
 				</div>
 				<div class="photocolumn">
-					<a class="photoContain" href="#"><img src="../images/photography/explore/muroof.jpg"></a>
+					<a class="photoContain" href="../photography/explore/muroof.html"><img src="../images/photography/explore/muroof.jpg"></a>
 					<a class="photoContain" href="#"><img src="../images/photography/explore/paces4.jpg"></a>
 					<a class="photoContain" href="#"><img src="../images/photography/explore/desmondkarma.jpg"></a>
 				</div>
