--- a/uiux/HTNmobile_app.html
+++ b/uiux/HTNmobile_app.html
@@ -213,6 +213,13 @@
 
 
 			</div>
+
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+			
 		</div>
 	</body>
 </html>
