--- a/uiux/clearspider.html
+++ b/uiux/clearspider.html
@@ -173,7 +173,7 @@
 
 					<h3 class="proj-subtitle">Prototype</h3>
 
-					<p class="project-desc">After completing the screens for this project, we prototyped our redesign on InVision and later pitched our solution to the judges.<a class="person" href=https://projects.invisionapp.com/share/MVAK1S576#/screens/220146969 target=_blank/>You can view our prototype here.</a></p>
+					<p class="project-desc">After completing the screens for this project, we prototyped our redesign on InVision and later pitched our solution to the judges.<a class="person" href=https://projects.invisionapp.com/share/MVAK1S576#/screens/220146969 target=_blank/> You can view our prototype here.</a></p>
 
 				</div>
 
@@ -184,6 +184,12 @@
 
 					<p class="project-desc">The Clear Spider redesign was my first UI/UX project I helped designed which has allowed me to experience methods used in the UX process. This project was a month after my User Experience Design class which was great to apply what I've learned in my class. Designing corporate software and redesigning a oversatured and bloated system has allowed me to improve a lot in this field as this was a difficult challenge to tackle.</p>
 
+				</div>
+
+				<!-- Footer -->
+
+				<div class="footer">
+					<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
 				</div>
 
 			</div>
