--- a/uiux/uiuxwork.html
+++ b/uiux/uiuxwork.html
@@ -79,7 +79,13 @@
 					<a class="viewWork" href="clearspider.html">View Case Study</a>
 				</div>
 			</div>
+			
+			<!-- Footer -->
 
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+			
 		</div>
 	</body>
 </html>
