--- a/graphicdesign/arthub.html
+++ b/graphicdesign/arthub.html
@@ -50,6 +50,12 @@
 					<img class="projectMock" src="../images/graphic_design/arthub.jpg">
 			</div>
 
-		</div>
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+
+		</div>	
 	</body>
 </html>
