--- a/graphicdesign/graphicdesign.html
+++ b/graphicdesign/graphicdesign.html
@@ -73,7 +73,12 @@
 					</div>
 				</div>
 			</div>
+			
+			<!-- Footer -->
 
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
 
 		</div>
 	</body>
