--- a/graphicdesign/hawkeye.html
+++ b/graphicdesign/hawkeye.html
@@ -64,6 +64,12 @@
 			
 			<iframe src="https://player.vimeo.com/video/198282541" width="100%" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+			
 		</div>
 	</body>
 </html>
