--- a/graphicdesign/samurai.html
+++ b/graphicdesign/samurai.html
@@ -54,6 +54,12 @@
 					<img class="projectMock" src="../images/graphic_design/samurai-line-art.jpg">
 			</div>
 
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+
 		</div>
 	</body>
 </html>
