--- a/graphicdesign/yrpc.html
+++ b/graphicdesign/yrpc.html
@@ -52,6 +52,18 @@
 					<img class="projectMock" src="../images/graphic_design/yrpcmockup.jpg">
 			</div>
 
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+
 		</div>
 	</body>
 </html>
