--- a/photography/photography.html
+++ b/photography/photography.html
@@ -57,6 +57,12 @@
 				</div>
 			</div>
 
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+			
 		</div>
 	</body>
 </html>
