--- a/uiux/hackthethrone.html
+++ b/uiux/hackthethrone.html
@@ -60,6 +60,13 @@
 				<p class="caption">Mockup of the final design.</p>
 
 			</div>
+
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+			
 		</div>
 	</body>
 </html>
