--- a/uiux/rbcpathway.html
+++ b/uiux/rbcpathway.html
@@ -268,6 +268,13 @@
 				</div>
 
 			</div>
+
+			<!-- Footer -->
+
+			<div class="footer">
+				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+			</div>
+			
 		</div>
 		<script type="text/javascript" src=../js/main.js></script>
 	</body>
