--- a/graphicdesign/arthub.html
+++ b/graphicdesign/arthub.html
@@ -53,7 +53,13 @@
 			<!-- Footer -->
 
 			<div class="footer">
-				<a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p>
+				<!-- <a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p> -->
+				<a class="footerlink" href="https://www.behance.net/jeffery-li" target=_blank><img class="footericon" src="images/icons/behance.png"></a>
+				<a class="footerlink" href="https://www.instagram.com/jefferyyli" target=_blank><img class="footericon" src="images/icons/instagram.png"></a>
+				<a class="footerlink" href="https://500px.com/jefferyyli" target=_blank><img class="footericon" src="images/icons/500px.png"></a>
+				<a class="footerlink" href="https://www.linkedin.com/in/jefferylii/" target=_blank><img class="footericon" src="images/icons/linkedin.png"></a>
+				<a class="footerlink" href="https://github.com/jefferyyli" target=_blank><img class="footericon" src="images/icons/github.png"></a>
+				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="images/icons/email.png"></a>
 			</div>
 
 		</div>	
