--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			
 			<nav>
 				<div class="navLeft">
-				<a href="index.html" class="navName">Jeffery Li</a>
+				<a href="index.html" class="navName"><!-- <img class="logo" src="images/logo.png"> -->Jeffery Li</a>
 				</div>
 					
 				<div class="navRight">
