--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
 					<p class="projectBody">If you're interested in working together or have any business inquiries, feel free to contact me through <a href="mailto:jeffery.li@outwaterloo.ca" class="person">email</a> or through any of my social media channels. </p>
 
-					<button class="resume">Resume</button>
+					<a href="documents/jeffery_resume.pdf" target=_blank><button class="resume">Resume</button></a>
 				</div>
 			</div>
 
