--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 			<div class="hero">
 				<h1 class="heroHead">jeffery li</h1>
-				<p class="heroBody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut orci id velit molestie pulvinar. Proin dapibus eu purus vitae posuere.</p>
+				<p class="heroBody">designer</p>
 			</div>
 
 			<h2 class="homeTitle">Featured Work</h2>
