updated home page

--- a/index.html
+++ b/index.html
@@ -26,34 +26,29 @@
 				</div>
 			</nav>
 
-			<div class="hero">
-				<h1 class="heroHead">jeffery li</h1>
-				<p class="heroBody">designer</p>
+			<div class="herocontainer">
+				<div class="herocover">
+					<img src=images/samuraihero.jpg>
+				</div>
+			</div>
+
+			<div>
+				<div class="hero">
+					<h1 class="heroHead">jeffery li</h1>
+					<p class="heroBody">designer</p>
+				</div>
 			</div>
 
 			<h2 class="homeTitle">Featured Work</h2>
 			<div class="grid">
 				<div class="homecontainer">
 					<a class="projectPicBox" href="uiux/rbcpathway.html"><img src=images/RBC_Pathway/RBCPathway_Mockup.jpg></a>
-					<!-- <p class="hovertext">RBC Pathway</p>
-					<p class="hoversubtext">UI/UX Design</p> -->
 				</div>
 				<div class="homecontainer">
-					<a class="projectPicBox" href="graphicdesign/samurai.html"><img src=images/graphic_design/samuraibox.jpg></a>
+					<a class="projectPicBox" href="uiux/HTNmobile_app.html"><img src=images/HTNmobileapp/HTNMobile_Mockup.jpg></a>
 				</div>
 			</div>
-			<div class="homegrid">
-				<div class=homebox> 
-					<a class="projectPicBox" href="uiux/HTNmobile_app.html"><img src="images/htnbox.jpg"></a>
-				</div>
-				<div class="homebox">
-					<a class="projectPicBox" href="photography/explore/muroof.html"><img src="images/mubox.jpg"></a>
-				</div>
-				<div class="homebox">
-					<a class="projectPicBox" href="photography/urban/goldengatefog.html"><img src="images/sfbox.jpg"></a>
-				</div>
-			</div>
-
+			
 			<!-- Footer -->
 
 			<div class="footer">
