some home page fixes

--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
 			<div class="grid">
 				<div class="homecontainer">
 					<a class="projectPicBox" href="uiux/rbcpathway.html"><img src=images/RBC_Pathway/RBCPathway_Mockup.jpg></a>
+					<h3 class="work-title">RBC Pathway</h3>
+					<h4 class="projectType">UI/UX Design</h4>
 				</div>
 				<div class="homecontainer">
 					<a class="projectPicBox" href="uiux/HTNmobile_app.html"><img src=images/HTNmobileapp/HTNMobile_Mockup.jpg></a>
+					<h3 class="work-title">HTN Mobile App Redesign</h3>
+					<h4 class="projectType">UI/UX Design</h4>
 				</div>
 			</div>
 			
