added responsiveness to about page

--- a/about.html
+++ b/about.html
@@ -26,11 +26,11 @@
 				</div>
 			</nav>
 
-			<div style="display: flex; margin-top: 8em"> 
+			<div class="aboutcontainer"> 
 				<div>
-					<img style="width: 475px; height: auto" src="images/me.jpg">
+					<img class="aboutimg" src="images/me.jpg">
 				</div>
-				<div style="margin-left: 2.5em; max-width: 45%">
+				<div class="aboutinfo">
 					<h1 class="abouttitle">About</h1>
 					<p class="projectBody">Hey, I'm Jeffery Li and I'm a designer. I'm a student studying Global Business and Digital Arts at the University of Waterloo with a passion for product design. I'm highly interested in solving design problems and creating beautiful experiences for people. I'm knowledgable in other creative fields such as graphic design and illustration. I'm also currently learning and interested in front-end development. In my spare time, I love going out to shoot photography and film on the streets of the city.</p>
 
