--- a/about.html
+++ b/about.html
@@ -37,6 +37,8 @@
 					<p class="projectBody">If you're interested in working together or have any business inquiries, feel free to contact me through <a href="mailto:jeffery.li@outwaterloo.ca" class="person">email</a> or through any of my social media channels. </p>
 
 					<a href="documents/jeffery_resume.pdf" target=_blank><button class="resume">Resume</button></a>
+
+					<p class="note">Note: Site is still in progress! Some parts are not fully responsive yet. Sorry for the issues. :)</p>
 				</div>
 			</div>
 
