added scrolltop function to other case studies

--- a/uiux/HTNmobile_app.html
+++ b/uiux/HTNmobile_app.html
@@ -25,7 +25,9 @@
 				</div>
 			</nav>
 
-			<h1 class="projectTitle">Hack the North 2017 Mobile App</h1>
+			<a href="#top" onclick="scrollToTop();return false"><button id="scrollToTop"><i class="arrow up"></i></button></a>
+
+			<h1 class="projectTitle"><body id="top">Hack the North 2017 Mobile App</h1>
 			<h3 class="projectSubtitle">Redesigning the mobile app for the largest hackathon in Canada</h3>
 			
 			<div class="metaDesc">
