--- a/uiux/clearspider.html
+++ b/uiux/clearspider.html
@@ -25,7 +25,9 @@
 				</div>
 			</nav>
 
-			<h1 class="projectTitle">Clear Spider UI/UX Redesign</h1>
+			<a href="#top" onclick="scrollToTop();return false"><button id="scrollToTop"><i class="arrow up"></i></button></a>
+			
+			<h1 class="projectTitle"><body id="top">Clear Spider UI/UX Redesign</h1>
 			<h3 class="projectSubtitle">Redesigning the visual and user experience in 48 hours</h3>
 			
 			<div class="metaDesc">
