--- a/uiux/rbcpathway.html
+++ b/uiux/rbcpathway.html
@@ -25,7 +25,7 @@
 				</div>
 			</nav>
 
-			<button onclick="topFunction()" id="scrollToTop" title="go to top"><i class="arrow up"></i></button>
+			<a href="#top" onclick="scrollToTop();return false"><button id="scrollToTop"><i class="arrow up"></i></button></a>
 
 
 			<h1 class="projectTitle"><body id="top">RBC Pathway</h1>
