--- a/uiux/hackthethrone.html
+++ b/uiux/hackthethrone.html
@@ -25,7 +25,9 @@
 				</div>
 			</nav>
 
-			<h1 class="projectTitle">Hack the Throne</h1>
+			<a href="#top" onclick="scrollToTop();return false"><button id="scrollToTop"><i class="arrow up"></i></button></a>
+
+			<h1 class="projectTitle"><body id="top">Hack the Throne</h1>
 			<h3 class="projectSubtitle">The greatest Hackathon that never happened</h3>
 			
 			<div class="metaDesc">
