grammar spelling fixes

--- a/uiux/HTNmobile_app.html
+++ b/uiux/HTNmobile_app.html
@@ -69,7 +69,7 @@
 
 					<h3 class="proj-subtitle">Sign In Flow</h3>
 
-					<p class="project-desc">The old flow for signing into the account was inefficient as you had to click on the "Sign In" button, enter your hacker email, click on "Next", enter your password, and then click on "Log In". You can log in much faster if you are able to enter your email and password on one screen and then click on one button that says "Login". I also thought that the text on the buttons were a bit too small.</p>
+					<p class="project-desc">The old flow for signing into the account was inefficient as you had to click on the "Sign In" button, enter your hacker email, click on "Next", enter your password, and then click on "Log In". You can log in much faster if you are able to enter your email and password on one screen and then click on one button that says "Login". I also thought that the text on the buttons were a bit too small for it to be readable.</p>
 
 					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2016login.png"></div>
 					<p class="caption">2016 Sign In Flow</p>
@@ -95,7 +95,7 @@
 
 					<h3 class="proj-subtitle">Mentoring</h3>
 
-					<p class="project-desc">One great feature of the app is being able to request mentorship from other hackers or sponsors. If a hacker is having problems with their hack and needs help, they are able to request for help. I thought that the flow for requesting for help was easy and simple. I would not change anything about the flow but there were a few areas in this feature that could be improved on. When you request for help, there is a field for putting in your locaiton. This is not a good idea because some hackers could be very vague about their location or they may not even be there when the mentor comes to help. There needs be a way for the hacker to communicate with the mentor when they need to find eachother. For the category section, you can only select a category from a list. The category/tag is for which language or framework the hacker needs help with and since there are a tons of languages and frameworks, the list would be very long. The user should be able to search for the language or framework.</p>
+					<p class="project-desc">One great feature of the app is being able to request mentorship from other hackers or sponsors. If a hacker is having problems with their hack and needs assistance, they are able to request for help. I thought that the flow for requesting for help was easy and simple. I would not change anything about the flow but there were a few areas in this feature that could be improved on. When you request for help, there is a field for putting in your location. This is not a good idea because some hackers could be very vague about their location or they may not even be there when the mentor comes to help. There needs be a way for the hacker to communicate with the mentor when they need to find each other. For the category section, you can only select a category from a list. The category/tag is for which language or framework the hacker needs help with and since there are a ton of languages and frameworks, the list would be very long. The user should be able to search for the language or framework.</p>
 
 					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2016mentorflow.png"></div>
 					<p class="caption">2016 Mentor Request Flow</p>
@@ -159,7 +159,7 @@
 
 					<h3 class="proj-subtitle">Updates</h3>
 
-					<p class="project-desc">I added a timer where hackers can check when hacking ends. Users are able to hide and unhide the timer by clicking on the chevron on the top right of the timer. Unfortunately this feature of the app did not get implemented as we had time constraints but the front-end team was able to implement this timer on the day-of event website! I also added a filter so users can filter out updates based on what they want to see. The text is also much more readable and easier to look at by adding more white space. Another feature I designed was the blue dot beside the title of an update. The blue dot means that a new update was posted that the user did not see yet.</p>
+					<p class="project-desc">I added a timer where hackers can check when hacking ends. Users are able to hide and unhide the timer by clicking on the chevron on the top right of the timer. Unfortunately, this feature of the app did not get implemented as we had time constraints but the front-end team was able to implement this timer on the day-of event website! I also added a filter so users can filter out updates based on what they want to see. The text is also much more readable and easier to look at by adding more white space. Another small feature we added to Updates was the blue dot beside the title of a post. The blue dot means that a new update was posted that the user did not see yet.</p>
 
 					<div class="projectMock"><img class="projectMock" src="../images/HTNmobileapp/2017updates.png"></div>
 					<p class="caption">2017 HTN Mobile Updates Screens</p>
@@ -211,10 +211,8 @@
 				<div class="overview">
 					<h3 class="project-title">Conclusion</h3>
 
-					<p class="project-desc">In the end, a lot of my final designs changed a lot when it was implemented on mobile. There were a few features that did not make it due to technical or time constrains. My designs were translated into iOS later by Moez because my designs were Android based. I learned a lot from this project as this was my first mobile design project. I learned a lot about visual design in mobile as they were completely different from designing a website or web app and I later learned and Google Material Design guidelines (e.g. margins charged from version 1 to 2 because I later found out about proper margins in mobile). Next time, I would improve on time-management and properly planning the design for the next project. Because of time constraints, I was not able to do a bit of research, user-testing, and prototyping which I would definitely try to do so next time.</p>
-
-
-			</div>
+					<p class="project-desc">In the end, a lot of my final designs changed a lot when it was implemented on mobile. There were a few features that did not make it due to technical or time constraints. My designs were translated into iOS later by Moez because my designs were Android based. I learned a lot from this project as this was my first mobile design project. As this was my first mobile project, I was able to improve my visual design in mobile and as well as learn and follow Google Material Design guidelines. Next time, I want to properly plan the design and research for the next project. Because of my ability in time-management for this project, I was not able to further improve on the design of our mobile app as I could have been able to conduct some user-testing or some research which would have definitely improved our product.</p>
+				</div>
 
 			<!-- Footer -->
 
