--- a/uiux/clearspider.html
+++ b/uiux/clearspider.html
@@ -61,7 +61,7 @@
 					<p class="project-desc">Clear Spider wanted us to focus on three areas of functionality:</p>
 					<ul>
 						<li>Asset Tracking: Items needed to be tracked with data such as barcode, location, and category. Items also need to be searchable and filterable.</li>
-						<li>Order Management: Orders go through multiple stages from start to finish. Users need to be able to create orders and each needs to include data so the item can be tracked.</li>
+						<li>Order Management: Orders go through multiple stages from start to finish. Users need to be able to create orders and each need to include data so the item can be tracked.</li>
 						<li>Inventory Optimization: Auto replenishment feature to determine when and how much to place an order for new items.</li>
 					</ul>
 
@@ -93,7 +93,7 @@
 					</ul>
 
 					<h3 class="proj-subtitle">Executive Level/Office Administrator</h3>
-					<p class="project-desc">This type of user is someone who looks at operations at a business or strategic level. Sample job titles include VP's and Directors. Because of time constraints, our team did not focus much on this user as we believed this the other two personas were more important.</p>
+					<p class="project-desc">This type of user is someone who looks at operations at a business or strategic level. Sample job titles include VP's and Directors. Because of time constraints, our team did not focus much on this user as we believed this persona was not as important as the other two personas.</p>
 
 				</div>
 
@@ -141,7 +141,7 @@
 
 					<h3 class="proj-subtitle">Filter Flow</h3>
 
-					<p class="project-desc">To satisfy the need of finding an item quick and having a better workflow, we designed a filter where the user can find items by location or category. Because there are so many facets and filters, we decided to keep this page seperate.</p>
+					<p class="project-desc">To satisfy the need of finding an item quick and having a better workflow, we designed a filter where the user can find items by location or category. Because there are so many facets and filters, we decided to keep this page separate.</p>
 
 					<div class="projectMock"><img class="projectMock" src="../images/clearspider/filterflow.png"></div>
 
@@ -167,7 +167,7 @@
 					<div class="projectMock"><img class="projectMock" src="../images/clearspider/filter.png"></div>
 					<p class="caption">Filter and search system</p>
 
-					<p class="project-desc">The redesign of the inventory system is now easier to read by removing some visual elements, features, and as well as using a new font and layout. To sastify the need of restocking inventory at the right time, we added a low alert on inventory in the table. If an item reaches below the low alert number, the item will be highlighted in red to notify the user.</p>
+					<p class="project-desc">The redesign of the inventory system is now easier to read by removing some visual elements, features, and as well as using a new font and layout. To satisfy the need of restocking inventory at the right time, we added a low alert on inventory in the table. If an item reaches below the low alert number, the item will be highlighted in red to notify the user.</p>
 
 					<div class="projectMock"><img class="projectMock" src="../images/clearspider/inventory.png"></div>
 					<p class="caption">New inventory layout</p>
