--- a/uiux/HTNmobile_app.html
+++ b/uiux/HTNmobile_app.html
@@ -227,5 +227,15 @@
 			</div>
 			
 		</div>
+		
+		<script type="text/javascript" src=../js/scrolltop.js></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-109259214-1');
+		</script>
 	</body>
 </html>
