--- a/graphicdesign/arthub.html
+++ b/graphicdesign/arthub.html
@@ -62,6 +62,15 @@
 				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="../images/icons/email.png"></a>
 			</div>
 
-		</div>	
+		</div>
+		
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-109259214-1');
+		</script>
 	</body>
 </html>
