--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					
 				<div class="navRight">
 				<a href="uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="photography/photography.html" class="navLink">Photography</a>
-				<a href="about.html" class="navLink">About</a>
+				<a href="graphicdesign/graphicdesign.html" class="navLink">graphic design</a>
+				<a href="photography/photography.html" class="navLink">photography</a>
+				<a href="about.html" class="navLink">about</a>
 				</div>
 			</nav>
 
