--- a/portfolio_v2/index.html
+++ b/portfolio_v2/index.html
@@ -39,7 +39,7 @@
 			<div class="work-container">
 				<div class="work">
 					<div class="homecontainer">
-						<a class="projectPicBox" href="../uiux/rbcpathway.html"><img src="../images/RBC_Pathway/RBCPathway_Mockup.jpg" class="work-img"></a>
+						<a class="projectPicBox" href="../portfolio_v2/design/rbcpathway.html"><img src="../portfolio_v2/images/design/rbc-home.png" class="work-img"></a>
 						<h3 class="work-title">RBC Pathway</h3>
 						<h4 class="project-type">UI/UX Design</h4>
 						<p class="project-info">A new tool for UX designers and researchers at RBC Royal Bank.</p>
@@ -48,7 +48,7 @@
 						<a class="projectPicBox" href="../uiux/rbcpathway.html"><img src="../images/HTNmobileapp/HTN-logo.jpg" class="work-img"></a>
 						<h3 class="work-title">Hack the North Mobile App</h3>
 						<h4 class="project-type">Product Design</h4>
-						<p class="project-info">Redesigning a mobile app of the largest hackathon in Canada.</p>
+						<p class="project-info">Redesigning a mobile app for the largest hackathon in Canada.</p>
 					</div>
 				</div>
 				<div class="work">
