--- a/portfolio_v2/index.html
+++ b/portfolio_v2/index.html
@@ -70,8 +70,17 @@
 			<!-- Footer -->
 
 			<footer>
-				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
 		</div>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-109259214-1');
+		</script>
 	</body>
 </html>
 
