--- a/portfolio_v2/design/rbcpathway.html
+++ b/portfolio_v2/design/rbcpathway.html
@@ -28,7 +28,7 @@
 
 		<div class="container">
 			<p class="proj-tags">Design Thinking, UI/UX Design, User Research</p>
-			<p>During my internship at RBC Royal Bank, I was given the opportunity to lead a project from start to finish with other fellow co-op students, Daniel Kim and Emily MacGowan. The problem that we were given by our managers is that at RBC, many employees do not share their research findings and we wanted to figure out why that is happening and how we can solve that problem.</p>
+			<p>During my internship at RBC Royal Bank, I was given the opportunity to lead a project from start to finish with other fellow co-op students, <a href="https://www.linkedin.com/in/danielkim5/" class="person" target=_blank>Daniel Kim</a> and <a href="https://www.linkedin.com/in/emilymacgowan/" class="person" target=_blank>Emily MacGowan</a>. The problem that we were given by our managers is that at RBC, many employees do not share their research findings and we wanted to figure out why that is happening and how we can solve that problem.</p>
 
 			<!-- Pre-Discovery -->
 
@@ -39,14 +39,89 @@
 				<li> Documented the potential impact of success with our project</li>
 				<li> The business goals associated with this problem space i.e. what value does this research add to RBC and why?</li>
 				</ul>
-			<p>While doing our pre-discovery research, we also found that there were other problems as well. We found that that there was a disconnect for every team with how they store documents and assets, and as well as sharing them with other employees. Once we felt that we did enough pre-discovery research we moved into problem framing phase to give us a starting point for our research.</p>
+			<p>Once we felt that we did enough pre-discovery research we moved into problem framing phase to give us a starting point for our research.</p>
 
 			<!-- Problem Framing -->
 
 			<h4 class="section-title">Problem Framing</h4>
 			<p>The purpose of this stage of is to unpack the problem space and craft a 'How might we'(HMW) statement with the team and stakeholders. At this stage, we hosted a problem framing workshop with our team (Employee Digital Experience Architecture). We started off our workshop by introducing the context of the project, goals and our pre-discovery research. Afterwards we gave the participants the following seed question:</p>
 			<p class="quote">“What might be the biggest challenge when sharing research/insights and accessing existing research/insights?”</p>
-			<p>The participants were asked to write down some of the challenges they face in their day-to-day lives at work on sticky notes. Afterwards Dan, Emily, and I clustered the stickies into common themes and the participants were given three sticky dots to vote for which challenges were most important to solve for.</p>
+			<p>The participants were asked to write down some of the challenges they face in their day-to-day lives at work on sticky notes. Afterwards we clustered the stickies into common themes and the participants were given sticky dots to vote for which challenges were most important to solve for. The challenges with the most votes were: 'How might we make sure insights reach the people it would be most relevant to' and 'Finding the research'.</p>
+			<img class="work-pic" src="../../images/RBC_Pathway/pathway1.jpeg">
+			<p class="caption">The resulting themes from the framing session includes: context, redundancy in work, awareness, efficiency, challenging your research, finding research, organization, sharing/cultural, technical, quality/reliability.</p>
 
+			<!-- Initial HMW Statement -->
+
+			<h4 class="section-title">Initial HMW Statement</h4>
+			<p>As we were running out of the time in the framing workshop, the team was not able to craft a HMW statement together. Instead Dan, Emily, and I crafted the HMW statement the following work day and later discussed it with our colleagues via email so we would have an alignment for our HMW statement. This was the first draft of our HMW statement:</p>
+			<p class="quote">"How might we foster a community of RBC researchers to share relevant information with one another so that they can make more well-informed decisions?"</p>
+			<p>We need to do some research to understand how RBC employees currently share information within the organization and if they are motivated or desire to be a part of a community. We also included 'relevant information' in the HMW statement as well as we know that when using other's research, it must be relevant to the context including the time. We also assumed that researchers could make better decisions or research conclusions if they are aware of other research or leveraging knowledge from within the organization.</p>
+
+			<!-- Research Phase -->
+
+			<h4 class="section-title">Research Phase</h4>
+			<p>During the research phase we conducted primary interviews and gathered secondary research to understand researchers’ experiences in finding, storing, sharing and using both internal and external research.</p>
+			<h5 class="section-subtitle">Primary &amp; Secondary Research</h5>
+			<p>We conducted interviews with 16 RBC employees. Due to time and budget constraints, our sample size was not diverse which has limited us and has given a bit of bias. Sample roles that were interviewed includes UI/UX Designer, Developer, Design Thinking Coach, UX Consultant and Product Manager.</p>
+			<p>After conducting interviews, we wanted to dig deeper based on the information we discovered through the interviews. We wanted to understand how users shared information across enterprises, barriers to knowledge sharing, and extrinsic/intrinsic motivations on why people share. We looked through research papers, case studies, articles, and wrote down interesting findings on sticky notes and added them to our synthesis wall.</p>
+			<h5 class="section-subtitle">Research Synthesis</h5>
+			<p>Our primary and secondary research was summarized and clustered into themes using a research method technique known as affinity diagramming. This technique helped us organize our data points into meaningful and manageable themes.</p>
+			<img class="work-pic" src="../../images/RBC_Pathway/pathway3.jpeg">
+			<p class="caption">As RBC did not have a dedicated space for designers and researchers, we ended up stealing a touchdown room and stayed in there for a week until we were kicked out.</p>
+			<p>Here are some sample insights we crafted from the data we synthesized:</p>
+			<div class="work-3col">
+				<div class="work-type">
+					<h5 class="section-subtitle">Insight #1</h5>
+					<p>RBC researchers rarely share the context and process for their research, instead they primarily share their polished research in the form of artifacts such as personas, insight statements, and PowerPoint Presentations.</p>
+				</div>
+				<div class="work-type">
+					<h5 class="section-subtitle">Insight #2</h5>
+					<p>Sharing is not a proactive part of the design process. Researchers primarily share when there is a request from another individual or team.</p>
+				</div>
+				<div class="work-type">
+					<h5 class="section-subtitle">Insight #3</h5>
+					<p>Because people prioritize confidentiality and convenience in different ways, RBC employees choose different platforms for storing research resulting in decentralization.</p>
+				</div>
+			</div>
+
+			<!-- Problem Reframe -->
+
+			<h4 class="section-title">Problem Reframe</h4>
+			<p>After synthesizing our research and crafting insight statements we re-framed our initial problem statement based on our primary and secondary research. This is our revised problem statement:</p>
+			<p class="quote">"How might we enable RBC researchers to more easily and proactively document their research, and feel comfortable in doing so, so that other researchers can leverage the output and/or further their design process?"</p>
+			<p>At RBC, we discovered that sharing is not a proactive part of the research and employees typically only share when there is a request. Researchers are also more likely to use existing research if they know how relevant it is in today's context, if the source is reputable and if the context is close to their own. Researchers at RBC also rarely share the entire context or process of their own research. Instead, they primarily share their research in polished forms of artifacts such as PowerPoint presentations, personas, and insight statements.</p>
+
+			<!-- Persona -->
+
+			<h4 class="section-title">Primary Persona</h4>
+			<p>A primary evidence-based persona was developed using the research we conducted as a team. In this persona we outlined user goals, behaviours, current pains, values, tools used and their needs and desires with respect to finding, sharing, using and documenting research. This is a draft of our persona and will be continuously developed with further research in the future when the project is handed over to next team.</p>
+			<img class="work-pic-white" src="../../images/RBC_Pathway/pathway4.png">
+
+			<!-- Ideation -->
+
+			<h4 class="section-title">Ideation</h4>
+			<p>Due to time and budget constraints, we were not able to hold an ideation workshop with participants. Instead we hosted an ideation session with just Emily, Dan and I. We started the ideation session by generating ideas solo. Later, we shared our ideas with each other, gave feedback, and listed pros and cons of each proposed solution. Afterwards we took the best ideas and pulled them into the final solution. While thinking about the solution, we made sure to reference insight statements, the persona, research themes, and the revised HMW statement.</p>
+			<img class="work-pic-white" src="../../images/RBC_Pathway/whiteboard.jpg">
+			<p class="caption">Whiteboard sketches of our prototype.</p>
+
+			<!-- Prototype -->
+
+			<h4 class="section-title">Prototype</h4>
+			<p>Because of the time we had left before our internships ended, we only had a limited time to design our screens and flows. Ideally more sketching and brainstorming should've been put into this phase of our project. We used the RBC Visual Design guidelines to help us create a colour palette and as well as following the icons, typography, and CTAs RBC used.</p>
+
+			<!-- Footer -->
+
+			<footer>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
+		</div>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-109259214-1');
+		</script>
 	</body>
 </html>
