--- a/portfolio_v2/index.html
+++ b/portfolio_v2/index.html
@@ -45,7 +45,7 @@
 						<p class="project-info">A new tool for UX designers and researchers at RBC Royal Bank.</p>
 					</div>
 					<div class="homecontainer">
-						<a class="projectPicBox" href="../uiux/rbcpathway.html"><img src="../images/HTNmobileapp/HTN-logo.jpg" class="work-img"></a>
+						<a class="projectPicBox" href="../portfolio_v2/design/HTNmobileapp.html"><img src="../images/HTNmobileapp/HTN-logo.jpg" class="work-img"></a>
 						<h3 class="work-title">Hack the North Mobile App</h3>
 						<h4 class="project-type">Product Design</h4>
 						<p class="project-info">Redesigning a mobile app for the largest hackathon in Canada.</p>
