--- a/portfolio_v2/design/rbcpathway.html
+++ b/portfolio_v2/design/rbcpathway.html
@@ -20,9 +20,11 @@
 				<a href="#" class="nav-link">about</a>
 			</nav>
 
+			<a href="#top" onclick="scrollToTop();return false"><button id="scrollToTop"><i class="arrow up"></i></button></a>
+
 		</div>
 
-		<div class="banner">
+		<div class="banner"><body id="top">
 			<img src="../images/design/rbc-banner.jpg">
 		</div>
 
@@ -146,6 +148,10 @@
 			<p>After completing the mockups, we prototyped Pathway on InVision and did some user testing. As we were in our final week of our internship, we were concurrently developing Pathway and running user-testing sessions as time was short. Dan led the development while Emily and I assisted as we wanted to get our hands dirty with front-end development. We used ReactJS to develop Pathway and I helped create some simple pages such as the modals and the Resources page. On the other end, Emily led user-testing and we did what we could in the time we had left. We generally received positive feedback and incorporated the feedback into our prototype. In the end, we developed an almost functional Pathway and handed off our project to our team.</p>
 			<p><a class="person" href=http://pathwaydraft.mybluemix.net target=_blank/>Check out our live prototype here.</a></p>
 
+			<!-- Conclusion -->
+
+			<h4 class="section-title">Conclusion</h4>
+			<p>I learned a lot while working on this project and there are many areas we could improve on in the future. I learned many new research methods and improved my development and design skills as well. I also learned the value of research itself as this was my first project involving research. In the beginning before conducting research, I was naive to think that the solution to this problem was creating a database. After uncovering more information, and ideating for the solution, I realized that I shouldn't jump to conclusions and instead, focus on staying in the problem space longer than the solution space. I hope that the development of this project continues at RBC and hopefully see the final product that my colleagues and I worked hard on.</p>
 
 			<!-- Footer -->
 
@@ -153,6 +159,7 @@
 				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
 			</footer>
 		</div>
+		<script type="text/javascript" src=../../js/scrolltop.js></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
