--- a/portfolio_v2/index.html
+++ b/portfolio_v2/index.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="work">
 					<div class="homecontainer">
-						<a class="projectPicBox" href="../uiux/rbcpathway.html"><img src="../images/clearspider/Clearspider_Mockup.jpg" class="work-img"></a>
+						<a class="projectPicBox" href="../portfolio_v2/design/clearspider.html"><img src="../images/clearspider/Clearspider_Mockup.jpg" class="work-img"></a>
 						<h3 class="work-title">ClearSpider UI/UX Redesign</h3>
 						<h4 class="project-type">UI/UX Design</h4>
 						<p class="project-info">Redesigning a cloud-based inventory management system in 48 hours.</p>
