--- a/uiux/clearspider.html
+++ b/uiux/clearspider.html
@@ -160,7 +160,7 @@
 					<p class="project-desc">To satisfy the need to track and manage orders, we designed a process bar for the shipment status of items. This screen specifies what type of order this is, the source, quantity, item, and destination.</p>
 
 					<div class="projectMock"><img class="projectMock" src="../images/clearspider/schedule.png"></div>
-					<p class="caption">Dashboard for the redesigned system</p>
+					<p class="caption">Order details</p>
 
 					<p class="project-desc">As there are a large number of different orders and items in a warehouse or business, it would be very difficult to search and filter for a specific item the user is looking for. We designed an easy to use filter and search system so they can search by category, type of product, and location.</p>
 
