--- a/portfolio_v2/index.html
+++ b/portfolio_v2/index.html
@@ -5,7 +5,7 @@
 		<title>Jeffery Li</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="main.css"/>
+		<link rel="stylesheet" type="text/css" href="css/main.css"/>
 		<script src="https://use.fontawesome.com/b11ad6d76a.js"></script>
 	</head>
 
@@ -59,7 +59,7 @@
 						<p class="project-info">Redesigning a cloud-based inventory management system in 48 hours.</p>
 					</div>
 					<div class="homecontainer">
-						<a class="projectPicBox" href="../uiux/rbcpathway.html"><img src="../images/HTT/HTT-logo.jpg" class="work-img"></a>
+						<a class="projectPicBox" href="../portfolio_v2/design/hackthethrone.html""><img src="../images/HTT/HTT-logo.jpg" class="work-img"></a>
 						<h3 class="work-title">Hack the Throne Website</h3>
 						<h4 class="project-type">Web Design</h4>
 						<p class="project-info">The greatest hackathon that never happened.</p>
