--- a/portfolio_v2/design/clearspider.html
+++ b/portfolio_v2/design/clearspider.html
@@ -5,7 +5,7 @@
 		<title>Clearspider UI/UX Design</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../main.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/main.css"/>
 	</head>
 
 	<body>
