--- a/portfolio_v2/design/hackthethrone.html
+++ b/portfolio_v2/design/hackthethrone.html
@@ -31,8 +31,8 @@
 		<div class="container">
 			<p class="proj-tags">Web Design</p>
 			<p>Every year at Hack the North, we have a tradition of creating a fake hackathon as an April Fool's joke. We also use this joke to promote Hack the North and as well as to help us prepare for what's to come when we plan for the actual hackathon in the summer. We go all out and this includes creating the content, creating social media accounts and posts, copywriting, designing the website, and implementing it. It took us a while to figure out our joke for April fools but in the end, we thought it would be hilarious if we had a medieval hackathon. Hack the Throne would've been held at Casa Loma, a castle in Toronto, and we would also hold workshops as "Pit of Pythons" and "The Quest for Ruby".</p>
-			<p>For this project, I was in charge of creating graphics, branding, and the design of the website itself. My main inspiration for this design was old school MMORPGs (e.g. Runescape) and fantasy digital art. This was my first time creating designs for a website and I learned a lot from responsive design to assisting developer hand-off. <a href="https://hackthethrone.com" class="person" target="_blank">Check out the implemented website here!</p>
-			<img class="work-pic" src="../../images/HTT/hackthethrone.png">
+			<p>For this project, I was in charge of creating graphics, branding, and the design of the website itself. My main inspiration for this design was old school MMORPGs (e.g. Runescape) and fantasy digital art. This was my first time creating designs for a website and I learned a lot from responsive design to assisting developer hand-off. <a href="https://hackthethrone.com" class="person" target="_blank">Check out the implemented website here!</a></p>
+			<img class="work-pic-full" src="../../images/HTT/hackthethrone.png" alt="Hack the Throne">
 			<p class="caption">Mockup of the final design.</p>
 			
 			<!-- Footer -->
@@ -41,7 +41,7 @@
 				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
 			</footer>
 		</div>
-		<script type="text/javascript" src=../../js/scrolltop.js></script>
+		<script src=../../js/scrolltop.js></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
