--- a/portfolio_v2/design/clearspider.html
+++ b/portfolio_v2/design/clearspider.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/zoom.css"/>
 	</head>
 
 	<body>
@@ -64,41 +65,41 @@
 
 			<h4 class="section-title">Wireframes</h4>
 			<p>We started this case competition by brainstorming and creating proto-personas, user tasks, and stories. There were also optionals/bonus that we could include in our redesign such as designing an omni-search and data exports/imports.</p>
-			<img class="work-pic" src="../../images/clearspider/whiteboard1.png">
+			<img class="work-pic" src="../../images/clearspider/whiteboard1.png" alt="Whiteboard sketches" data-action="zoom">
 			<p class="caption">Planning out user flows and tasks</p>
 			<p>Some low-fi wireframes we drew on the whiteboard. We were planning how to lay out the database and as well as creating a filtering system.</p>
-			<img class="work-pic" src="../../images/clearspider/whiteboard4.jpg">
+			<img class="work-pic" src="../../images/clearspider/whiteboard4.jpg" alt="Whiteboard sketches" data-action="zoom">
 			<p class="caption">Low-fi wireframes on whiteboard</p>
 
 			<!-- User Flow -->
 
 			<h4 class="section-title">Site Map &amp; User Flows</h4>
 			<p>Because of the limited time we had for the case competition we were not able to redesign the entire system. We created a site map for the features we created.</p>
-			<img class="work-pic-full" src="../../images/clearspider/sitemap.png">
+			<img class="work-pic-full" src="../../images/clearspider/sitemap.png" alt="Site map" data-action="zoom">
 			<p class="caption"></p>
 			<h5 class="section-subtitle">Create Order Flow</h5>
 			<p>One of the key uses as a manager or hands-on staff would be to create a new order. They would first select the whether the order was coming in or going out, then they would choose a process type, which includes replenishment, fulfillment, or vendor return. Then they would select the date they wish to receive the order by if it was inbound, or date to ship by if it was outbound.</p>
-			<img class="work-pic-full" src="../../images/clearspider/createorderflow.png">
+			<img class="work-pic-full" src="../../images/clearspider/createorderflow.png" alt="Create order flow" data-action="zoom">
 			<p class="caption"></p>
 			<h5 class="section-subtitle">Filter Flow</h5>
 			<p>To satisfy the need of finding an item quick and having a better workflow, we designed a filter where the user can find items by location or category. Because there are so many facets and filters, we decided to keep this page separate.</p>
-			<img class="work-pic-full" src="../../images/clearspider/filterflow.png">
+			<img class="work-pic-full" src="../../images/clearspider/filterflow.png" alt="Filter flow" data-action="zoom">
 			<p class="caption"></p>
 
 			<!-- Final Design -->
 
 			<h4 class="section-title">Final Designs &amp; Prototype</h4>
 			<p>Even though we decided that executive level users were not as important as the other two users, we still wanted to include their needs in our redesign. We decided to design a dashboard so that the facility manager and executive level users are able to view insights and data so that they can make well-informed decisions for the business.</p>
-			<img class="work-pic" src="../../images/clearspider/dashboard.png">
+			<img class="work-pic" src="../../images/clearspider/dashboard.png" alt="Dashboard" data-action="zoom">
 			<p class="caption">Dashboard for the redesigned system</p>
 			<p>To satisfy the need to track and manage orders, we designed a process bar for the shipment status of items. This screen specifies what type of order this is, the source, quantity, item, and destination.</p>
-			<img class="work-pic" src="../../images/clearspider/schedule.png">
+			<img class="work-pic" src="../../images/clearspider/schedule.png" alt="Order details" data-action="zoom">
 			<p class="caption">Order details</p>
 			<p>As there are a large number of different orders and items in a warehouse or business, it would be very difficult to search and filter for a specific item the user is looking for. We designed an easy to use filter and search system so they can search by category, type of product, and location.</p>
-			<img class="work-pic" src="../../images/clearspider/filter.png">
+			<img class="work-pic" src="../../images/clearspider/filter.png" alt="Filter" data-action="zoom">
 			<p class="caption">Filter and search system</p>
 			<p>The redesign of the inventory system is now easier to read by removing some visual elements, features, and as well as using a new font and layout. To satisfy the need of restocking inventory at the right time, we added a low alert on inventory in the table. If an item reaches below the low alert number, the item will be highlighted in red to notify the user.</p>
-			<img class="work-pic" src="../../images/clearspider/inventory.png">
+			<img class="work-pic" src="../../images/clearspider/inventory.png" alt="New inventory layout" data-action="zoom">
 			<p class="caption">New inventory layout</p>
 			<h5 class="section-subtitle">Prototype</h5>
 			<p>After completing the screens for this project, we prototyped our redesign on InVision and later pitched our solution to the judges.<a class="person" href=https://projects.invisionapp.com/share/MVAK1S576#/screens/220146969 target=_blank/> You can view our prototype here.</a></p>
@@ -115,7 +116,10 @@
 				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
 			</footer>
 		</div>
-		<script type="text/javascript" src=../../js/scrolltop.js></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="../../js/zoom.js"></script>
+		<script src="../../js/transition.js"></script>
+		<script src=../../js/scrolltop.js></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
