--- a/portfolio_v2/design/rbcpathway.html
+++ b/portfolio_v2/design/rbcpathway.html
@@ -163,7 +163,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="../../js/zoom.js"></script>
 		<script src="../../js/transition.js"></script>
-		<script type="text/javascript" src="../../js/scrolltop.js"></script>
+		<script src="../../js/scrolltop.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
