before everything fucks up omg fuck

--- a/portfolio_v2/design/hackthethrone.html
+++ b/portfolio_v2/design/hackthethrone.html
@@ -14,10 +14,14 @@
 			<!-- Navigation -->
 			
 			<nav>
-				<a href="../index.html" class="nav-link">design</a>
-				<a href="#" class="nav-link">misc.</a>
-				<a href="#" class="nav-link">photography</a>
-				<a href="#" class="nav-link">about</a>
+				<div class="navLeft">
+					<a href="../index.html" class="nav-link-l">jl/design</a>
+				</div>
+				<div class="navRight">
+					<a href="#" class="nav-link">misc.</a>
+					<a href="#" class="nav-link">photography</a>
+					<a href="#" class="nav-link">about</a>
+				</div>
 			</nav>
 
 			<a href="#top" onclick="scrollToTop();return false"><button id="scrollToTop"><i class="arrow up"></i></button></a>
