--- a/portfolio_v2/index.html
+++ b/portfolio_v2/index.html
@@ -15,10 +15,14 @@
 			<!-- Navigation -->
 			
 			<nav>
-				<a href="#" class="nav-link">design</a>
-				<a href="#" class="nav-link">misc.</a>
-				<a href="#" class="nav-link">photography</a>
-				<a href="#" class="nav-link">about</a>
+				<div class="navLeft">
+					<a href="#" class="nav-link-l">jl/design</a>
+				</div>
+				<div class="navRight">
+					<a href="#" class="nav-link">misc.</a>
+					<a href="#" class="nav-link">photography</a>
+					<a href="#" class="nav-link">about</a>
+				</div>
 			</nav>
 
 			<!-- Hero -->
