--- a/photography/photography.html
+++ b/photography/photography.html
@@ -4,8 +4,9 @@
 	<head>
 		<title>Photography</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="../assets/css/zoom.css"/>
 	</head>
 
 	<body>
@@ -15,62 +16,26 @@
 			
 			<nav>
 				<div class="navLeft">
-				<a href="../index.html" class="navName">Jeffery Li</a>
+					<a href="../index.html" class="nav-link-l">jl/design</a>
 				</div>
-					
 				<div class="navRight">
-				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="" class="navLink">Photography</a>
-				<a href="../about.html" class="navLink">About</a>
+					<a href="#" class="nav-link">misc.</a>
+					<a href="#" class="nav-link">photography</a>
+					<a href="#" class="nav-link">about</a>
 				</div>
 			</nav>
 
-			<!-- Title -->
-
-			<h1 class="photoTitle">Photography</h1>
-			<p class="photo-desc">If you don't see me sitting behind the computer designing, I'll be behind a camera shooting the streets of Toronto.</br></br>
-			Check out my <a class="person" href="https://www.instagram.com/jefferyyli/" target=_blank>Instagram</a> to view more photos.</p>
-
-			<!-- Photography -->
-
-			<div class="row">
-				<div class="photocontainer ">
-					<a class="photoPicContainer" href="urban.html"><img class="fullwidth" src="../images/photography/urban.jpg"></a>
-					<p class="hovertext">Urban &amp; Street</p>
-					<p class="hoversubtext">A collection of photos from Toronto, New York City, and San Francisco</p>
-				</div>
-				<div class="photocontainer ">
-					<a class="photoPicContainer" href="explore.html"><img class="fullwidth" src="../images/photography/explore.jpg"></a>
-					<p class="hovertext">Explore</p>
-					<p class="hoversubtext">Views from high altitudes above the city</p>
-				</div>
-				<div class="photocontainer ">
-					<a class="photoPicContainer" href="nature.html"><img class="fullwidth" src="../images/photography/nature.jpg"></a>
-					<p class="hovertext">Nature</p>
-					<p class="hoversubtext">Getting away from the city</p>
-				</div>
-				<div class="photocontainer ">
-					<a class="photoPicContainer" href="portraits.html"><img class="fullwidth" src="../images/photography/portraits2.jpg"></a>
-					<p class="hovertext">Portraits</p>
-					<p class="hoversubtext">Friends, family, and models</p>
-				</div>
-			</div>
-
-			<!-- Footer -->
-
-			<div class="footer">
-				<!-- <a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p> -->
-				<a class="footerlink" href="https://www.behance.net/jeffery-li" target=_blank><img class="footericon" src="../images/icons/behance.png"></a>
-				<a class="footerlink" href="https://www.instagram.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/instagram.png"></a>
-				<a class="footerlink" href="https://500px.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/500px.png"></a>
-				<a class="footerlink" href="https://www.linkedin.com/in/jefferylii/" target=_blank><img class="footericon" src="../images/icons/linkedin.png"></a>
-				<a class="footerlink" href="https://github.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/github.png"></a>
-				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="../images/icons/email.png"></a>
+			<div class="construction">
+				<h1 class="construct-text">This page under construction.</h1>
+				<h3 class="construction-subtext">Please check back later. In the mean time check out my <a href="https://www.instagram.com/jefferyyli/" class="person" target=_blank>Instagram</a>. :)</h3>
 			</div>
 			
-		</div>
+			<!-- Footer -->
 
+			<footer>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
+		</div>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
